infra/k8s/ingress/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gateway-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: gateway-api

                port:
                  number: 80
