infra/k8s/ingress/order-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: saga-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /ai(/|$)(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: ai-api

                port:
                  number: 80

          - path: /()(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: order-api

                port:
                  number: 80
